--- a/index.html
+++ b/index.html
@@ -5,10 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Teddy Heidmann</title>
     <link rel="stylesheet" href="http://static.alphasigcornell.org/main/css/foundation.css" />
-    <link rel="shortcut icon" type="image/png" href="http://static.alphasigcornell.org/web/favicon.ico"/>
+    <link rel="shortcut icon" type="image/png" href="favicon.ico"/>
     <style>
+	.sticky, .name, .top-bar, .top-bar-section li a:not(.button){
+		background:#535D64 !important;
+	}
 	.top-bar-section li a:not(.button):hover {
-		background:#C41E3A !important;
+		background:#69C !important;
+	}
+	.accordion-navigation a:not(.content):not(.parlink):not(hover){
+		color:#515C65 !important;
+		background:#F1F8FE !important;
+	}
+	.accordion-navigation a:not(.button):not(.parlink):hover {
+		background:#D0E9FC !important;
+	}
+	.parlink:hover {
+		font-style:italic;
+	}
+	p {
+		color:#7D8B97;
+	}
+	.intro {
+		color:#535D64;
+	}
+	h5 {
+		color:#515C65 !important;
+	}
+	.panel {
+		background-color:#E8F4FD !important;
+	}
+	.fn {
+		color:#535D64 !important;
 	}
     </style>
     <script src="http://static.alphasigcornell.org/main/js/vendor/modernizr.js"></script>
@@ -39,7 +67,7 @@
 <br>
 	<div class="row small-centered">
         <div class="small-12 columns small-centered">
-        	<p>I am currently a Junior at Cornell University studying Computer Science with concentrations in Network Science and Artificial Intelligence. I enjoy working with websites and databases, and look forward to taking more AI and machine learning classes this fall.</p>
+        	<p class="intro">I am currently a Junior at Cornell University studying Computer Science with concentrations in Network Science and Artificial Intelligence. I enjoy working with websites and databases, and look forward to taking more AI and machine learning classes this fall.</p>
         </div>
     </div>
 	<div class="row">
@@ -52,7 +80,7 @@
                 <li class="accordion-navigation">
                     <a href="#cscms">Computer Science Course Management System</a>
                     <div id="cscms" class="content">
-                    	<a target="_blank" href="http://www.cs.cornell.edu/Projects/cms/">Project Description</a>
+                    	<a class="parlink" target="_blank" href="http://www.cs.cornell.edu/Projects/cms/">Project Description</a>
                         <p>I recently joined the development team for the CS Course Management System (CMS) at Cornell. I am currently on the team tasked with fixing bugs and adding new features to the currently deployed system, while other teams work on various other versions of the system.</p>
                     </div>
                 </li>
@@ -61,7 +89,7 @@
                 <li class="accordion-navigation">
                     <a href="#alphasig">Alpha Sigma Phi, Iota Chapter Website</a>
                     <div id="alphasig" class="content">
-                    	<a target="_blank" href="http://alphasigcornell.org/">Website</a>
+                    	<a class="parlink" target="_blank" href="http://alphasigcornell.org/">Website</a>
                         <p>I developed a website from scratch using Django (roughly 6,000 lines of code written). It includes both a front-end section for the public to view (link above), and a hidden section for viewing individual accounts, social deposits, house points, etc, as well as a wiki with a page for each brother.</p>
                     </div>
                 </li>
@@ -70,7 +98,7 @@
                 <li class="accordion-navigation">
                     <a href="#signin">Django Sign-in Page with Webcam</a>
                     <div id="signin" class="content">
-                    	<!--<a target="_blank" href="http://github.com/ateddy42/django-signin">GitHub Repository</a>-->
+                    	<!--<a class="parlink" target="_blank" href="http://github.com/ateddy42/django-signin">GitHub Repository</a>-->
                         <p>Used for a few organizations I'm a part of, I developed a website to allow people to sign in at meetings by filling out personal info, taking a picture with a webcam, and uploading it to a server. The head of the organization can later log in and view a list of all the guests that day, and there is a mirrored site for other members of the group to view the guest that the head is currently reviewing. I am currently fixing bugs and will be putting the code up on GitHub soon.</p>
                     </div>
                 </li>
@@ -79,7 +107,7 @@
                 <li class="accordion-navigation">
                     <a href="#tumblr">Tumblr Recommended Blog Idea</a>
                     <div id="tumblr" class="content">
-                    	<a target="_blank" href="https://github.com/ateddy42/tumblr_recommended">Github Readme</a>
+                    	<a class="parlink" target="_blank" href="https://github.com/ateddy42/tumblr_recommended">Github Readme</a>
                         <p>An idea I came up with for an improved blog recommendation system for Tumblr. It takes into account a user's individual preferences and what they typically reblog, as well as who they typically reblog from. It could be implemented with a very small amount of code, and could vastly improve the quality of recommended blogs compared to what are currently being recommended to users. The problem many people currently have with the recommended blogs is that they have nothing to do with their interests at all, and that the same 5 blogs are recommended to every user on Tumblr, regardless of interests.</p>
                     </div>
                 </li>
@@ -88,7 +116,7 @@
                 <li class="accordion-navigation">
                     <a href="#email">PHP Email Program</a>
                     <div id="email" class="content">
-                    	<a target="_blank" href="https://gist.github.com/ateddy42/0624a36ed07e262f177f">GitHub Gist</a>
+                    	<a class="parlink" target="_blank" href="https://gist.github.com/ateddy42/0624a36ed07e262f177f">GitHub Gist</a>
                         <p>Simple php file I wrote to send emails to any address 'from' any address using the PHP mail() function. For use only with your own email address, or with emails ending with "@example.com".</p>
                     </div>
                 </li>
@@ -107,7 +135,7 @@
                 <li class="accordion-navigation">
                     <a href="#cs3110bot">CS 3110 - "Steammon"</a>
                     <div id="cs3110bot" class="content">
-                    	<a target="_blank" href="http://www.cs.cornell.edu/Courses/cs3110/archive/tournaments.html#fa2014">Project Description</a>
+                    	<a class="parlink" target="_blank" href="http://www.cs.cornell.edu/Courses/cs3110/archive/tournaments.html#fa2014">Project Description</a>
                         <p>Myself and two of my friends programmed a game similar to the battle part of Pokemon. We wrote the entire gameplay and interactions between characters, as well as an AI to beat all the other AIs in a class-wide tournament, all in the <i>wonderful</i> language of OCaml. Although we ran out of time due to impending finals week, we ended up winning 2nd place in the tournament, even after choosing Metapod (no attack moves, just defense).</p>
                     </div>
                 </li>
@@ -116,7 +144,7 @@
                 <li class="accordion-navigation">
                     <a href="#cs3410cache">CS 3410 - "Lord of the Cache"</a>
                     <div id="cs3410cache" class="content">
-                    	<a target="_blank" href="http://www.cs.cornell.edu/Courses/cs3410/2015sp/project/pa3/pa3.html">Project Description</a>
+                    	<a class="parlink" target="_blank" href="http://www.cs.cornell.edu/Courses/cs3410/2015sp/project/pa3/pa3.html">Project Description</a>
                         <p>My roommate and I programmed a bot to compete in a version of "Core Wars" designed specifically for our CS 3410 programming class. Written entirely in C, we had to figure out a strategy to write a hexadecimal 'payload' to our half of the virtual memory, keeping in mind that we could only write to a memory location if it was in the cache. Meanwhile, the opposing team was trying to fill up their half of the memory with a different payload. We also implemented offensive strategies in order to stall the opponent cores.</p>
                     </div>
                 </li>
