Made headers slightly darker, easier to read

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		color:#535D64;
 	}
 	h5 {
-		color:#515C65 !important;
+		color:#3E464B !important;
 	}
 	.panel {
 		background-color:#E8F4FD !important;
