Changed headers to make them stand out more

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		color:#3E464B !important;
 	}
 	.panel {
-		background-color:#E8F4FD !important;
+		background-color:#CCDAEF !important;
 	}
 	.fn {
 		color:#535D64 !important;
