--- a/index.html
+++ b/index.html
@@ -80,6 +80,11 @@
                 <li class="accordion-navigation">
                     <a href="#cscms">Computer Science Course Management System</a>
                     <div id="cscms" class="content">
+                    	<ul class="clearing-thumbs small-block-grid-3" data-clearing>
+							<li><a href="img/cms_1.png"><img src="img/cms_1.png"></a></li>
+							<li><a href="img/cms_2.png"><img src="img/cms_2.png"></a></li>
+							<li><a href="img/cms_3.png"><img src="img/cms_3.png"></a></li>
+						</ul>
                     	<a class="parlink" target="_blank" href="http://www.cs.cornell.edu/Projects/cms/">Project Description</a>
                         <p>I recently joined the development team for the CS Course Management System (CMS) at Cornell. I am currently on the team tasked with fixing bugs and adding new features to the currently deployed system, while other teams work on various other versions of the system.</p>
                     </div>
@@ -89,6 +94,12 @@
                 <li class="accordion-navigation">
                     <a href="#alphasig">Alpha Sigma Phi, Iota Chapter Website</a>
                     <div id="alphasig" class="content">
+                        <ul class="clearing-thumbs small-block-grid-4" data-clearing>
+							<li><a href="img/brothers_home.png" data-caption="Home page"><img src="img/brothers_home.png"></a></li>
+							<li><a href="img/brothers_login.png" data-caption="Login screen for backend section"><img src="img/brothers_login.png"></a></li>
+							<li><a href="img/brothers_treas.png" data-caption="Page for viewing individual accounts"><img src="img/brothers_treas.png"></a></li>
+                            <li><a href="img/brothers_treas_one.png" data-caption="Individual account page for viewing transactions"><img src="img/brothers_treas_one.png"></a></li>
+						</ul>
                     	<a class="parlink" target="_blank" href="http://alphasigcornell.org/">Website</a>
                         <p>I developed a website from scratch using Django (roughly 6,000 lines of code written). It includes both a front-end section for the public to view (link above), and a hidden section for viewing individual accounts, social deposits, house points, etc, as well as a wiki with a page for each brother.</p>
                     </div>
@@ -98,6 +109,11 @@
                 <li class="accordion-navigation">
                     <a href="#signin">Django Sign-in Page with Webcam</a>
                     <div id="signin" class="content">
+                    	<ul class="clearing-thumbs small-block-grid-3" data-clearing>
+							<li><a href="img/signin_main.png" data-caption="Main signin page"><img src="img/signin_main.png"></a></li>
+							<li><a href="img/signin_all.png" data-caption="List of all signins"><img src="img/signin_all.png"></a></li>
+							<li><a href="img/signin_one.png" data-caption="View of individual signin"><img src="img/signin_one.png"></a></li>
+						</ul>
                     	<!--<a class="parlink" target="_blank" href="http://github.com/ateddy42/django-signin">GitHub Repository</a>-->
                         <p>Used for a few organizations I'm a part of, I developed a website to allow people to sign in at meetings by filling out personal info, taking a picture with a webcam, and uploading it to a server. The head of the organization can later log in and view a list of all the guests that day, and there is a mirrored site for other members of the group to view the guest that the head is currently reviewing. I am currently fixing bugs and will be putting the code up on GitHub soon.</p>
                     </div>
@@ -135,6 +151,10 @@
                 <li class="accordion-navigation">
                     <a href="#cs3110bot">CS 3110 - "Steammon"</a>
                     <div id="cs3110bot" class="content">
+                    	<ul class="clearing-thumbs small-block-grid-3" data-clearing>
+							<li><a href="img/steammon.png"><img src="img/steammon.png"></a></li>
+							<li><a href="img/steammon_code.png"><img src="img/steammon_code.png"></a></li>
+						</ul>
                     	<a class="parlink" target="_blank" href="http://www.cs.cornell.edu/Courses/cs3110/archive/tournaments.html#fa2014">Project Description</a>
                         <p>Myself and two of my friends programmed a game similar to the battle part of Pokemon. We wrote the entire gameplay and interactions between characters, as well as an AI to beat all the other AIs in a class-wide tournament, all in the <i>wonderful</i> language of OCaml. Although we ran out of time due to impending finals week, we ended up winning 2nd place in the tournament, even after choosing Metapod (no attack moves, just defense).</p>
                     </div>
@@ -144,6 +164,11 @@
                 <li class="accordion-navigation">
                     <a href="#cs3410cache">CS 3410 - "Lord of the Cache"</a>
                     <div id="cs3410cache" class="content">
+                    	<ul class="clearing-thumbs small-block-grid-3" data-clearing>
+							<li><a href="img/cache_1.png"><img src="img/cache_1.png"></a></li>
+							<li><a href="img/cache_2.png"><img src="img/cache_2.png"></a></li>
+							<li><a href="img/cache_3.png"><img src="img/cache_3.png"></a></li>
+						</ul>
                     	<a class="parlink" target="_blank" href="http://www.cs.cornell.edu/Courses/cs3410/2015sp/project/pa3/pa3.html">Project Description</a>
                         <p>My roommate and I programmed a bot to compete in a version of "Core Wars" designed specifically for our CS 3410 programming class. Written entirely in C, we had to figure out a strategy to write a hexadecimal 'payload' to our half of the virtual memory, keeping in mind that we could only write to a memory location if it was in the cache. Meanwhile, the opposing team was trying to fill up their half of the memory with a different payload. We also implemented offensive strategies in order to stall the opponent cores.</p>
                     </div>
