Fixed image display on mobile/tablet-sized devices

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <li class="accordion-navigation">
                     <a href="#cscms">Computer Science Course Management System</a>
                     <div id="cscms" class="content">
-                    	<ul class="clearing-thumbs small-block-grid-3" data-clearing>
+                    	<ul class="clearing-thumbs small-block-grid-2 medium-block-grid-3" data-clearing>
 							<li><a href="img/cms_1.png"><img src="img/cms_1.png"></a></li>
 							<li><a href="img/cms_2.png"><img src="img/cms_2.png"></a></li>
 							<li><a href="img/cms_3.png"><img src="img/cms_3.png"></a></li>
@@ -94,7 +94,7 @@
                 <li class="accordion-navigation">
                     <a href="#alphasig">Alpha Sigma Phi, Iota Chapter Website</a>
                     <div id="alphasig" class="content">
-                        <ul class="clearing-thumbs small-block-grid-4" data-clearing>
+                        <ul class="clearing-thumbs small-block-grid-2 medium-block-grid-3 large-block-grid-4" data-clearing>
 							<li><a href="img/brothers_home.png" data-caption="Home page"><img src="img/brothers_home.png"></a></li>
 							<li><a href="img/brothers_login.png" data-caption="Login screen for backend section"><img src="img/brothers_login.png"></a></li>
 							<li><a href="img/brothers_treas.png" data-caption="Page for viewing individual accounts"><img src="img/brothers_treas.png"></a></li>
@@ -109,7 +109,7 @@
                 <li class="accordion-navigation">
                     <a href="#signin">Django Sign-in Page with Webcam</a>
                     <div id="signin" class="content">
-                    	<ul class="clearing-thumbs small-block-grid-3" data-clearing>
+                    	<ul class="clearing-thumbs small-block-grid-2 medium-block-grid-3" data-clearing>
 							<li><a href="img/signin_main.png" data-caption="Main signin page"><img src="img/signin_main.png"></a></li>
 							<li><a href="img/signin_all.png" data-caption="List of all signins"><img src="img/signin_all.png"></a></li>
 							<li><a href="img/signin_one.png" data-caption="View of individual signin"><img src="img/signin_one.png"></a></li>
@@ -151,7 +151,7 @@
                 <li class="accordion-navigation">
                     <a href="#cs3110bot">CS 3110 - "Steammon"</a>
                     <div id="cs3110bot" class="content">
-                    	<ul class="clearing-thumbs small-block-grid-3" data-clearing>
+                    	<ul class="clearing-thumbs small-block-grid-2  medium-block-grid-3" data-clearing>
 							<li><a href="img/steammon.png"><img src="img/steammon.png"></a></li>
 							<li><a href="img/steammon_code.png"><img src="img/steammon_code.png"></a></li>
 						</ul>
@@ -164,7 +164,7 @@
                 <li class="accordion-navigation">
                     <a href="#cs3410cache">CS 3410 - "Lord of the Cache"</a>
                     <div id="cs3410cache" class="content">
-                    	<ul class="clearing-thumbs small-block-grid-3" data-clearing>
+                    	<ul class="clearing-thumbs small-block-grid-2  medium-block-grid-3" data-clearing>
 							<li><a href="img/cache_1.png"><img src="img/cache_1.png"></a></li>
 							<li><a href="img/cache_2.png"><img src="img/cache_2.png"></a></li>
 							<li><a href="img/cache_3.png"><img src="img/cache_3.png"></a></li>
