Added end of the semester projects

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 	<div class="row">
 		<div class="columns small-centered">
 			<div class="panel radius">
-				<h5>Programming Projects</h5>
+				<h5>Personal Projects</h5>
 			</div>
 			<ul class="accordion hover" data-accordion>
 				<!--START OF PROJECT-->
@@ -147,6 +147,15 @@
 				<h5>Class-Assigned Projects</h5>
 			</div>
 			<ul class="accordion hover" data-accordion>
+            	<!--START OF PROJECT-->
+				<li class="accordion-navigation">
+					<a href="#info4220">INFO 4220 - "Information Cascades via Yik Yak"</a>
+					<div id="info4220" class="content">
+						<a class="parlink" target="_blank" href="./img/FinalReport.pdf">Final Report</a>
+						<p>The final project for our Networks II class involved investigating the effects of information cascades via the anonymous social media application, Yik Yak. We posted a variety of text posts on the application and recorded the results as people 'upvoted' and 'downvoted' them. We then used a large number of users to sway the number of votes in either the positive or negative direction, and tried to see if this created an information cascade where the post received a much higher or lower score than the control.</p>
+					</div>
+				</li>
+				<!--END OF PROJECT-->
 				<!--START OF PROJECT-->
 				<li class="accordion-navigation">
 					<a href="#cs3110bot">CS 3110 - "Steammon"</a>
@@ -171,6 +180,15 @@
 						</ul>
 						<a class="parlink" target="_blank" href="http://www.cs.cornell.edu/Courses/cs3410/2015sp/project/pa3/pa3.html">Project Description</a>
 						<p>My roommate and I programmed a bot to compete in a version of "Core Wars" designed specifically for our CS 3410 programming class. Written entirely in C, we had to figure out a strategy to write a hexadecimal 'payload' to our half of the virtual memory, keeping in mind that we could only write to a memory location if it was in the cache. Meanwhile, the opposing team was trying to fill up their half of the memory with a different payload. We also implemented offensive strategies in order to stall the opponent cores.</p>
+					</div>
+				</li>
+				<!--END OF PROJECT-->
+                <!--START OF PROJECT-->
+				<li class="accordion-navigation">
+					<a href="#cs3410honeypot">CS 3410 - "Network Honeypot"</a>
+					<div id="cs3410honeypot" class="content">
+						<a class="parlink" target="_blank" href="http://www.cs.cornell.edu/Courses/cs3410/2015sp/project/pa4/pa4.html">Project Description</a>
+						<p>The final project for CS 3410 involved creating a network honeypot from scratch. It received packets from a network device, analyzed and classified them, and tracked statistics over time. We ran it on a simulated MIPS multi-core machine, and had to implement everything with speed and efficiency in mind. Our final submission used 12 out of an available 32 cores, and achieved 10 Mbit/s with virtually 0 packets dropped, and 15 Mbit/s with less than 5% of packets dropped.</p>
 					</div>
 				</li>
 				<!--END OF PROJECT-->
