Reorganized main page, added new photos, and work from NetApp

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <br>
 	<div class="row small-centered">
 		<div class="small-12 columns small-centered">
-			<p class="intro">I am currently a Junior at Cornell University studying Computer Science with concentrations in Network Science and Artificial Intelligence. I enjoy working with websites and databases, and look forward to taking more AI and machine learning classes this fall.</p>
+			<p class="intro">I am currently a Senior at Cornell University studying Computer Science with concentrations in Network Science and Artificial Intelligence. My plan is to continue studying at Cornell next year and earn a Master of Engineering. I enjoy working with websites and databases, and look forward to learning more about AI and ML this school year.</p>
 		</div>
 	</div>
 	<div class="row">
@@ -76,20 +76,6 @@
 				<h5>Personal Projects</h5>
 			</div>
 			<ul class="accordion hover" data-accordion>
-				<!--START OF PROJECT-->
-				<li class="accordion-navigation">
-					<a href="#cscms">Computer Science Course Management System</a>
-					<div id="cscms" class="content">
-						<ul class="clearing-thumbs small-block-grid-2 medium-block-grid-3" data-clearing>
-							<li><a href="img/cms_1.png"><img src="img/cms_1.png"></a></li>
-							<li><a href="img/cms_2.png"><img src="img/cms_2.png"></a></li>
-							<li><a href="img/cms_3.png"><img src="img/cms_3.png"></a></li>
-						</ul>
-						<a class="parlink" target="_blank" href="http://www.cs.cornell.edu/Projects/cms/">Project Description</a>
-						<p>I recently joined the development team for the CS Course Management System (CMS) at Cornell. I am currently on the team tasked with fixing bugs and adding new features to the currently deployed system, while other teams work on various other versions of the system.</p>
-					</div>
-				</li>
-				<!--END OF PROJECT-->
 				<!--START OF PROJECT-->
 				<li class="accordion-navigation">
 					<a href="#alphasig">Alpha Sigma Phi, Iota Chapter Website</a>
@@ -101,7 +87,7 @@
 							<li><a href="img/brothers_treas_one.png"><img data-caption="Individual account page for viewing transactions" src="img/brothers_treas_one.png"></a></li>
 						</ul>
 						<a class="parlink" target="_blank" href="http://alphasigcornell.org/">Website</a>
-						<p>I developed a website from scratch using Django (roughly 6,000 lines of code written). It includes both a front-end section for the public to view (link above), and a hidden section for viewing individual accounts, social deposits, house points, etc, as well as a wiki with a page for each brother.</p>
+						<p>I developed a website from scratch using Django (roughly 6,000 lines of code written). It includes both a front-end section for the public to view (link above), and a hidden section for viewing individual accounts, social deposits, house points, etc, as well as a wiki with a page for each brother. It was written using the Foundation framework, and is mobile optimized.</p>
 					</div>
 				</li>
 				<!--END OF PROJECT-->
@@ -195,12 +181,48 @@
 			</ul>
 		</div>
 	</div>
+	<br>
+	<div class="row">
+		<div class="columns small-centered">
+			<div class="panel radius">
+				<h5>Organization Projects</h5>
+			</div>
+			<ul class="accordion hover" data-accordion>
+				<!--START OF PROJECT-->
+				<li class="accordion-navigation">
+					<a href="#cscms">Computer Science Course Management System - <i>Software Developer</i></a>
+					<div id="cscms" class="content">
+						<ul class="clearing-thumbs small-block-grid-2 medium-block-grid-3" data-clearing>
+							<li><a href="img/cms_1.png"><img src="img/cms_1.png"></a></li>
+							<li><a href="img/cms_2.png"><img src="img/cms_2.png"></a></li>
+							<li><a href="img/cms_3.png"><img src="img/cms_3.png"></a></li>
+						</ul>
+						<a class="parlink" target="_blank" href="http://www.cs.cornell.edu/Projects/cms/">Project Description</a>
+						<p>I am a member the development team for the CS Course Management System (CMS) at Cornell. I am currently on the team tasked with fixing bugs and adding new features to the currently deployed system, while other teams work on various other versions of the system. My goal for this semester is to rewrite the way URLs are handled, and decrease the time taken to display a page.</p>
+					</div>
+				</li>
+				<!--END OF PROJECT-->
+            	<!--START OF PROJECT-->
+				<li class="accordion-navigation">
+					<a href="#netapp15">NetApp, Inc. - <i>Software Engineering Intern</i></a>
+					<div id="netapp15" class="content">
+						<ul class="clearing-thumbs small-block-grid-2 medium-block-grid-3" data-clearing>
+							<li><a href="img/netapp15showcase.jpg"><img src="img/netapp15showcase.jpg"></a></li>
+						</ul>
+						<p>I wrote a CLI/API to generate aggregate metrics of Customer Systems Risk results (aka ARS - At Risk Systems). This is then displayed to customers to give them an idea of the top N risks affecting them based on severity, number of systems affected, etc. Another project was to identify correlations between specific risks and system failures, and alert customers with preventative actions.</p>
+					</div>
+				</li>
+				<!--END OF PROJECT-->
+			</ul>
+		</div>
+	</div>
 
 	<footer class="row">
 		<div class="small-8 columns small-centered"><hr>
 		<center><ul class="vcard">
 			<li class="fn">Teddy Heidmann</li>
 			<li class="email"><a target="_blank" href="mailto:ath55@cornell.edu">ath55@cornell.edu</a></li>
+			<li><a class="parlink" target="_blank" href="./img/Teddy_Heidmann.pdf">Résumé</a></li>
 		</ul></center>
 	</footer>
 
