Updated post-Fall 2015 semester

--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
 							<li><a href="img/signin_main.png"><img data-caption="Main signin page" src="img/signin_main.png"></a></li>
 							<li><a href="img/signin_all.png"><img data-caption="List of all signins" src="img/signin_all.png"></a></li>
 							<li><a href="img/signin_one.png"><img data-caption="View of individual signin" src="img/signin_one.png"></a></li>
+							<li><a href="img/signin_house.png"><img data-caption="View the organization sees during discussion of signins" src="img/signin_house.png"></a></li>
 						</ul>
 						<!--<a class="parlink" target="_blank" href="http://github.com/ateddy42/django-signin">GitHub Repository</a>-->
 						<p>Used for a few organizations I'm a part of, I developed a website to allow people to sign in at meetings by filling out personal info, taking a picture with a webcam, and uploading it to a server. The head of the organization can later log in and view a list of all the guests that day, and there is a mirrored site for other members of the group to view the guest that the head is currently reviewing. I am currently fixing bugs and will be putting the code up on GitHub soon.</p>
@@ -137,7 +138,7 @@
 				<li class="accordion-navigation">
 					<a href="#info4220">INFO 4220 - "Information Cascades via Yik Yak"</a>
 					<div id="info4220" class="content">
-						<a class="parlink" target="_blank" href="./img/FinalReport.pdf">Final Report</a>
+						<a class="parlink" target="_blank" href="./img/4220FinalReport.pdf">Final Report</a>
 						<p>The final project for our Networks II class involved investigating the effects of information cascades via the anonymous social media application, Yik Yak. We posted a variety of text posts on the application and recorded the results as people 'upvoted' and 'downvoted' them. We then used a large number of users to sway the number of votes in either the positive or negative direction, and tried to see if this created an information cascade where the post received a much higher or lower score than the control.</p>
 					</div>
 				</li>
@@ -178,6 +179,24 @@
 					</div>
 				</li>
 				<!--END OF PROJECT-->
+                <!--START OF PROJECT-->
+				<li class="accordion-navigation">
+					<a href="#cs4701">CS 4701 - "Machines Against Cards Against Humanity"</a>
+					<div id="cs4701" class="content">
+						<a class="parlink" target="_blank" href="https://github.com/ateddy42/cardsAgainstHumanity">Github Repository</a> - <a class="parlink" target="_blank" href="http://cah.alphasigcornell.org/graph/">Project Results</a>
+						<p>Our project was to create an optimal Cards Against Humanity player that will be able to choose a winning card in every round. The player achieved this by tailoring its choice of card to the judge's (initially unknown) preferences, regardless of which judge is playing.</p>
+					</div>
+				</li>
+				<!--END OF PROJECT-->
+                <!--START OF PROJECT-->
+				<li class="accordion-navigation">
+					<a href="#cs4740">CS 4740 - "Natural Language Processing Application"</a>
+					<div id="cs4740" class="content">
+						<a class="parlink" target="_blank" href="./img/4740Report.pdf">Final Report</a>
+						<p>The goal for this (non-programming) project was to gain experience in the design of a Natural Language Processing System and the mapping of a real-world text analysis problem to tasks and methods from NLP. I chose to combine this with my project from CS 4701 and design a system that automated feature tagging of cards.</p>
+					</div>
+				</li>
+				<!--END OF PROJECT-->
 			</ul>
 		</div>
 	</div>
@@ -198,7 +217,7 @@
 							<li><a href="img/cms_3.png"><img src="img/cms_3.png"></a></li>
 						</ul>
 						<a class="parlink" target="_blank" href="http://www.cs.cornell.edu/Projects/cms/">Project Description</a>
-						<p>I am a member the development team for the CS Course Management System (CMS) at Cornell. I am currently on the team tasked with fixing bugs and adding new features to the currently deployed system, while other teams work on various other versions of the system. My goal for this semester is to rewrite the way URLs are handled, and decrease the time taken to display a page.</p>
+						<p>I am one of the developers for the CS Course Management System (CMS) at Cornell. One of the projects I worked on was the ability to download user-submitted files. I also worked on bug fixes and overall performance improvement, as well as small UI changes. I am currently working on porting the system over to Java Persistence API (JPA) from J2EE.</p>
 					</div>
 				</li>
 				<!--END OF PROJECT-->
