Updated wording for CMS project description

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 							<li><a href="img/cms_3.png"><img src="img/cms_3.png"></a></li>
 						</ul>
 						<a class="parlink" target="_blank" href="http://www.cs.cornell.edu/Projects/cms/">Project Description</a>
-						<p>I am one of the developers for the CS Course Management System (CMS) at Cornell. One of the projects I worked on was the ability to download user-submitted files. I also worked on bug fixes and overall performance improvement, as well as small UI changes. I am currently working on porting the system over to Java Persistence API (JPA) from J2EE.</p>
+						<p>I am currently one of the developers for the CS Course Management System (CMS) at Cornell. One of the projects I worked on was the ability to download user-submitted files. I also worked on bug fixes and overall performance improvement, as well as small UI changes. I am currently working on porting the system over to Java Persistence API (JPA) from J2EE.</p>
 					</div>
 				</li>
 				<!--END OF PROJECT-->
