Added info from Workday

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <br>
 	<div class="row small-centered">
 		<div class="small-12 columns small-centered">
-			<p class="intro">I am currently a Senior at Cornell University studying Computer Science with concentrations in Network Science and Artificial Intelligence. My plan is to continue studying at Cornell next year and earn a Master of Engineering. I enjoy working with websites and databases, and look forward to learning more about AI and ML this school year.</p>
+			<p class="intro">I graduated in 3 years from Cornell University with a B.S. in Computer Science, and am currently working on my Master of Engineering with a concentration in Artificial Intelligence. I enjoy working with websites and databases, and look forward to returning to the Bay Area post-graduation.</p>
 		</div>
 	</div>
 	<div class="row">
@@ -229,6 +229,17 @@
 							<li><a href="img/netapp15showcase.jpg"><img src="img/netapp15showcase.jpg"></a></li>
 						</ul>
 						<p>I wrote a CLI/API to generate aggregate metrics of Customer Systems Risk results (aka ARS - At Risk Systems). This is then displayed to customers to give them an idea of the top N risks affecting them based on severity, number of systems affected, etc. Another project was to identify correlations between specific risks and system failures, and alert customers with preventative actions.</p>
+					</div>
+				</li>
+				<!--END OF PROJECT-->
+            	<!--START OF PROJECT-->
+				<li class="accordion-navigation">
+					<a href="#workday16">Workday, Inc. - <i>Associate Application Developer Intern, Student</i></a>
+					<div id="workday16" class="content">
+						<ul class="clearing-thumbs small-block-grid-2 medium-block-grid-3" data-clearing>
+							<li><a href="img/workday16cb.jpg"><img src="img/workday16cb.jpg"></a></li>
+						</ul>
+						<p>I worked as an intern for the Workday Student team, along with 19 others. We built multiple projects from the ground up, including a badge system to gamify the Student App, and a system for Course Bidding, a type of early registration used by some Business and Law schools.</p>
 					</div>
 				</li>
 				<!--END OF PROJECT-->
