--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <br>
 	<div class="row small-centered">
 		<div class="small-12 columns small-centered">
-			<p class="intro">I graduated in 3 years from Cornell University with a B.S. in Computer Science, and am currently working on my Master of Engineering with a concentration in Artificial Intelligence. I enjoy working with websites and databases, and look forward to returning to the Bay Area post-graduation.</p>
+			<p class="intro">I graduated from Cornell University in 3 years with a B.S. in Computer Science, and am currently working on my Master of Engineering from Cornell with a concentration in Artificial Intelligence. I enjoy working with websites and databases, and look forward to returning to the Bay Area post-graduation.</p>
 		</div>
 	</div>
 	<div class="row">
@@ -237,7 +237,7 @@
 					<a href="#workday16">Workday, Inc. - <i>Associate Application Developer Intern, Student</i></a>
 					<div id="workday16" class="content">
 						<ul class="clearing-thumbs small-block-grid-2 medium-block-grid-3" data-clearing>
-							<li><a href="img/workday16cb.jpg"><img src="img/workday16cb.jpg"></a></li>
+							<li><a href="img/workday16CB.jpg"><img src="img/workday16CB.jpg"></a></li>
 						</ul>
 						<p>I worked as an intern for the Workday Student team, along with 19 others. We built multiple projects from the ground up, including a badge system to gamify the Student App, and a system for Course Bidding, a type of early registration used by some Business and Law schools.</p>
 					</div>
