Removed link to 4700 results

--- a/index.html
+++ b/index.html
@@ -183,7 +183,10 @@
 				<li class="accordion-navigation">
 					<a href="#cs4701">CS 4701 - "Machines Against Cards Against Humanity"</a>
 					<div id="cs4701" class="content">
-						<a class="parlink" target="_blank" href="https://github.com/ateddy42/cardsAgainstHumanity">Github Repository</a> - <a class="parlink" target="_blank" href="http://cah.alphasigcornell.org/graph/">Project Results</a>
+						<ul class="clearing-thumbs small-block-grid-2 medium-block-grid-3" data-clearing>
+							<li><a href="img/4700Results.png"><img src="img/4700Results.png"></a></li>
+						</ul>
+						<a class="parlink" target="_blank" href="https://github.com/ateddy42/cardsAgainstHumanity">Github Repository</a>
 						<p>Our project was to create an optimal Cards Against Humanity player that will be able to choose a winning card in every round. The player achieved this by tailoring its choice of card to the judge's (initially unknown) preferences, regardless of which judge is playing.</p>
 					</div>
 				</li>
