Added link to alphasig repository

--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
 							<li><a href="img/brothers_treas.png"><img data-caption="Page for viewing individual accounts" src="img/brothers_treas.png"></a></li>
 							<li><a href="img/brothers_treas_one.png"><img data-caption="Individual account page for viewing transactions" src="img/brothers_treas_one.png"></a></li>
 						</ul>
-						<a class="parlink" target="_blank" href="http://alphasigcornell.org/">Website</a>
+						<a class="parlink" target="_blank" href="http://alphasigcornell.org/">Website</a> - 
+						<a class="parlink" target="_blank" href="https://github.com/ateddy42/alphasigcornell">GitHub Repository</a>
 						<p>I developed a website from scratch using Django (roughly 6,000 lines of code written). It includes both a front-end section for the public to view (link above), and a hidden section for viewing individual accounts, social deposits, house points, etc, as well as a wiki with a page for each brother. It was written using the Foundation framework, and is mobile optimized.</p>
 					</div>
 				</li>
