Added link to CAH video

--- a/index.html
+++ b/index.html
@@ -187,7 +187,8 @@
 						<ul class="clearing-thumbs small-block-grid-2 medium-block-grid-3" data-clearing>
 							<li><a href="img/4700Results.png"><img src="img/4700Results.png"></a></li>
 						</ul>
-						<a class="parlink" target="_blank" href="https://github.com/ateddy42/cardsAgainstHumanity">Github Repository</a>
+						<a class="parlink" target="_blank" href="https://github.com/ateddy42/cardsAgainstHumanity">Github Repository</a> -
+						<a class="parlink" target="_blank" href="https://youtu.be/Rp99_zpSr5c">Project Video</a>
 						<p>Our project was to create an optimal Cards Against Humanity player that will be able to choose a winning card in every round. The player achieved this by tailoring its choice of card to the judge's (initially unknown) preferences, regardless of which judge is playing.</p>
 					</div>
 				</li>
