Updated for end of Spring 2017

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <br>
 	<div class="row small-centered">
 		<div class="small-12 columns small-centered">
-			<p class="intro">I graduated from Cornell University in 3 years with a B.S. in Computer Science, and am currently working on my Master of Engineering from Cornell with a concentration in Artificial Intelligence. I enjoy working with websites and databases, and look forward to returning to the Bay Area post-graduation.</p>
+			<p class="intro">I graduated from Cornell University in 3 years with a B.S. in Computer Science, and stayed an additional year to earn my Master of Engineering from Cornell with a concentration in Artificial Intelligence. I enjoy working with websites and databases, and currently work at Workday, Inc. in Pleasanton, CA.</p>
 		</div>
 	</div>
 	<div class="row">
@@ -104,15 +104,6 @@
 						</ul>
 						<!--<a class="parlink" target="_blank" href="http://github.com/ateddy42/django-signin">GitHub Repository</a>-->
 						<p>Used for a few organizations I'm a part of, I developed a website to allow people to sign in at meetings by filling out personal info, taking a picture with a webcam, and uploading it to a server. The head of the organization can later log in and view a list of all the guests that day, and there is a mirrored site for other members of the group to view the guest that the head is currently reviewing. I am currently fixing bugs and will be putting the code up on GitHub soon.</p>
-					</div>
-				</li>
-				<!--END OF PROJECT-->
-				<!--START OF PROJECT-->
-				<li class="accordion-navigation">
-					<a href="#tumblr">Tumblr Recommended Blog Idea</a>
-					<div id="tumblr" class="content">
-						<a class="parlink" target="_blank" href="https://github.com/ateddy42/tumblr_recommended">Github Readme</a>
-						<p>An idea I came up with for an improved blog recommendation system for Tumblr. It takes into account a user's individual preferences and what they typically reblog, as well as who they typically reblog from. It could be implemented with a very small amount of code, and could vastly improve the quality of recommended blogs compared to what are currently being recommended to users. The problem many people currently have with the recommended blogs is that they have nothing to do with their interests at all, and that the same 5 blogs are recommended to every user on Tumblr, regardless of interests.</p>
 					</div>
 				</li>
 				<!--END OF PROJECT-->
@@ -157,29 +148,6 @@
 					</div>
 				</li>
 				<!--END OF PROJECT-->
-				<!--START OF PROJECT-->
-				<li class="accordion-navigation">
-					<a href="#cs3410cache">CS 3410 - "Lord of the Cache"</a>
-					<div id="cs3410cache" class="content">
-						<ul class="clearing-thumbs small-block-grid-2	medium-block-grid-3" data-clearing>
-							<li><a href="img/cache_1.png"><img src="img/cache_1.png"></a></li>
-							<li><a href="img/cache_2.png"><img src="img/cache_2.png"></a></li>
-							<li><a href="img/cache_3.png"><img src="img/cache_3.png"></a></li>
-						</ul>
-						<a class="parlink" target="_blank" href="http://www.cs.cornell.edu/Courses/cs3410/2015sp/project/pa3/pa3.html">Project Description</a>
-						<p>My roommate and I programmed a bot to compete in a version of "Core Wars" designed specifically for our CS 3410 programming class. Written entirely in C, we had to figure out a strategy to write a hexadecimal 'payload' to our half of the virtual memory, keeping in mind that we could only write to a memory location if it was in the cache. Meanwhile, the opposing team was trying to fill up their half of the memory with a different payload. We also implemented offensive strategies in order to stall the opponent cores.</p>
-					</div>
-				</li>
-				<!--END OF PROJECT-->
-                <!--START OF PROJECT-->
-				<li class="accordion-navigation">
-					<a href="#cs3410honeypot">CS 3410 - "Network Honeypot"</a>
-					<div id="cs3410honeypot" class="content">
-						<a class="parlink" target="_blank" href="http://www.cs.cornell.edu/Courses/cs3410/2015sp/project/pa4/pa4.html">Project Description</a>
-						<p>The final project for CS 3410 involved creating a network honeypot from scratch. It received packets from a network device, analyzed and classified them, and tracked statistics over time. We ran it on a simulated MIPS multi-core machine, and had to implement everything with speed and efficiency in mind. Our final submission used 12 out of an available 32 cores, and achieved 10 Mbit/s with virtually 0 packets dropped, and 15 Mbit/s with less than 5% of packets dropped.</p>
-					</div>
-				</li>
-				<!--END OF PROJECT-->
                 <!--START OF PROJECT-->
 				<li class="accordion-navigation">
 					<a href="#cs4701">CS 4701 - "Machines Against Cards Against Humanity"</a>
@@ -199,6 +167,24 @@
 					<div id="cs4740" class="content">
 						<a class="parlink" target="_blank" href="./img/4740Report.pdf">Final Report</a>
 						<p>The goal for this (non-programming) project was to gain experience in the design of a Natural Language Processing System and the mapping of a real-world text analysis problem to tasks and methods from NLP. I chose to combine this with my project from CS 4701 and design a system that automated feature tagging of cards.</p>
+					</div>
+				</li>
+				<!--END OF PROJECT-->
+				<!--START OF PROJECT-->
+				<li class="accordion-navigation">
+					<a href="#cs4744">CS 4744 - "Order of Adjectives in English and Spanish"</a>
+					<div id="cs4744" class="content">
+						<a class="parlink" target="_blank" href="./img/4744FinalReport.pdf">Final Report</a>
+						<p>In the open-ended final for CS 4744 - Computational Linguistics, I researched the 'proper' order of adjectives in both English and Spanish. I then wrote a parser in OCaml that recognized valid adjective ordering in sentences, and outputed parse trees.</p>
+					</div>
+				</li>
+				<!--END OF PROJECT-->
+            	<!--START OF PROJECT-->
+				<li class="accordion-navigation">
+					<a href="#cs6740">CS 6740 - "Information Cascades in Discussions"</a>
+					<div id="cs6740" class="content">
+						<a class="parlink" target="_blank" href="./img/6740FinalReport.pdf">Final Report</a>
+						<p>Studying Wikipedia “Article for Deletion” discussions, we analyzed the series of votes cast by users, along with their rationale for their votes, finding evidence that information cascades occur. We investigated a number of language-centric features to understand the qualities of positive and negative cascades, and to see which posts have more influence over future posts. We use our findings to build a classifier that predicts the extent to which a cascade will grow in a discussion. We found not only that information cascades exist in these discussions, but that cascades in discussions are reasonably predictable, which is somewhat surprising given their subtlety.</p>
 					</div>
 				</li>
 				<!--END OF PROJECT-->
@@ -222,7 +208,7 @@
 							<li><a href="img/cms_3.png"><img src="img/cms_3.png"></a></li>
 						</ul>
 						<a class="parlink" target="_blank" href="http://www.cs.cornell.edu/Projects/cms/">Project Description</a>
-						<p>I am currently one of the developers for the CS Course Management System (CMS) at Cornell. One of the projects I worked on was the ability to download user-submitted files. I also worked on bug fixes and overall performance improvement, as well as small UI changes. I am currently working on porting the system over to Java Persistence API (JPA) from J2EE.</p>
+						<p>Starting in Fall 2015, I began migrating the CS Course Management System (CMS) from Java 2 Enterprise Edition (J2EE) to the Java Persistence API (JPA). The new system I implemented was deployed in production for a select number of courses in Spring 2017. It was deployed side-by-side with a server running Classic CMS, and the application redirected students to the correct server based on the courses they were accessing. I implemented a number of new features, including 'slip day' tracking, an auto-grader extension, and a command-line interface (CLI) to interract with the system.</p>
 					</div>
 				</li>
 				<!--END OF PROJECT-->
