--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <br>
 	<div class="row small-centered">
 		<div class="small-12 columns small-centered">
-			<p class="intro">I graduated from Cornell University in 3 years with a B.S. in Computer Science, and stayed an additional year to earn my Master of Engineering from Cornell with a concentration in Artificial Intelligence. I enjoy working with websites and databases, and currently work at Workday, Inc. in Pleasanton, CA.</p>
+			<p class="intro">I graduated from Cornell University with a B.S. in Computer Science, as well as a Master of Engineering with a concentration in Artificial Intelligence. I enjoy working with websites and databases, and currently work at Workday, Inc. in Pleasanton, CA.</p>
 		</div>
 	</div>
 	<div class="row">
@@ -76,6 +76,25 @@
 				<h5>Personal Projects</h5>
 			</div>
 			<ul class="accordion hover" data-accordion>
+				<!--START OF PROJECT-->
+				<li class="accordion-navigation">
+					<a href="#neuralnet">Neural Network Implementation in Java</a>
+					<div id="neuralnet" class="content">
+						<a class="parlink" target="_blank" href="https://github.com/ateddy42/NeuralNet">GitHub Repository</a>
+						<p>I noticed there aren't too many neural network implementations written in Java, so decided to try my hand at one. I tried to make it as customizable as possible, and to support a number of configurations. This was originally created in conjunction with my <a class="parlink" target="_blank" href="https://github.com/ateddy42/t4">Tic Tac Toe</a> game, but also works well with the <a class="parlink" target="_blank" href="http://yann.lecun.com/exdb/mnist/">MNIST</a> dataset and classifying handwritten digits. The simmulated annealing doesn't work that well yet, but I hope to improve it in the future. It would also be nice to import and export the current state, allowing you to better debug and see what the network is doing.</p>
+					</div>
+				</li>
+				<!--END OF PROJECT-->
+				<!--START OF PROJECT-->
+				<li class="accordion-navigation">
+					<a href="#t4">Tic Tac Toe for Java Neural Network</a>
+					<div id="t4" class="content">
+						<a class="parlink" target="_blank" href="https://github.com/ateddy42/t4">GitHub Repository</a>
+						<p>I wrote this game simply as a test for my <a class="parlink" target="_blank" href="https://github.com/ateddy42/NeuralNet">Neural Network</a> implementation in Java. It has very basic functionality to let you put two players against each other, either human or AI. There is one AI that randomly selects a square, another that was my first attempt at implementing the neural net, and a third that tries to backpropagate every time an invalid move is tried.</p>
+						<p>For the future, I'd like to add a new AI that takes board rotation into consideration to help the AI learn even faster, but I haven't quite figured out the best hashing/sorting algorithm. It would also be nice to be able to save the state of a game and import a saved game.</p>
+					</div>
+				</li>
+				<!--END OF PROJECT-->
 				<!--START OF PROJECT-->
 				<li class="accordion-navigation">
 					<a href="#alphasig">Alpha Sigma Phi, Iota Chapter Website</a>
@@ -243,7 +262,7 @@
 		<center><ul class="vcard">
 			<li class="fn">Teddy Heidmann</li>
 			<li class="email"><a target="_blank" href="mailto:ath55@cornell.edu">ath55@cornell.edu</a></li>
-			<li><a class="parlink" target="_blank" href="./img/Teddy_Heidmann.pdf">Résumé</a></li>
+			<!-- <li><a class="parlink" target="_blank" href="./img/Teddy_Heidmann.pdf">Résumé</a></li> -->
 		</ul></center>
 	</footer>
 
