Corrected email address

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <br>
 	<div class="row small-centered">
 		<div class="small-12 columns small-centered">
-			<p class="intro">I graduated from Cornell University with a B.S. in Computer Science, as well as a Master of Engineering with a concentration in Artificial Intelligence. I enjoy working with websites and databases, and currently work at Workday, Inc. in Pleasanton, CA.</p>
+			<p class="intro">I graduated from Cornell University with a B.S. in Computer Science, as well as a Master of Engineering with a concentration in Artificial Intelligence. I enjoy working with websites and databases, and currently work at Workday, Inc. in Pleasanton, CA on the Student Financial Aid Team.</p>
 		</div>
 	</div>
 	<div class="row">
@@ -261,7 +261,7 @@
 		<div class="small-8 columns small-centered"><hr>
 		<center><ul class="vcard">
 			<li class="fn">Teddy Heidmann</li>
-			<li class="email"><a target="_blank" href="mailto:ath55@cornell.edu">ath55@cornell.edu</a></li>
+			<li class="email"><a target="_blank" href="mailto:teddy@twig.org">teddy@twig.org</a></li>
 			<!-- <li><a class="parlink" target="_blank" href="./img/Teddy_Heidmann.pdf">Résumé</a></li> -->
 		</ul></center>
 	</footer>
